--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -5,9 +5,8 @@
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
     "scripts": {
-        "dev": "bun run --watch src/index.ts",
-        "build": "tsc",
-        "start": "bun run dist/index.js"
+        "dev": "bun run src/index.ts",
+        "start": "bun run src/index.ts"
     },
     "dependencies": {
         "@beg/types": "workspace:*",
@@ -15,7 +14,9 @@
         "@libsql/client": "^0.14.0",
         "drizzle-orm": "^0.39.1",
         "hono": "^3.0.0",
+        "knex": "^3.1.0",
         "mysql2": "^3.0.0",
+        "tedious": "^18.6.1",
         "zod": "^3.22.0"
     },
     "devDependencies": {
