--- a/compose.yml
+++ b/compose.yml
@@ -8,12 +8,12 @@ services:
             dockerfile: apps/api/Dockerfile
         develop:
             watch:
-                - action: sync
+                - action: sync+restart
                   path: ./apps/api
                   target: /app/apps/api
                   ignore:
                       - node_modules/
-                - action: sync
+                - action: sync+restart
                   path: ./packages
                   target: /app/packages
                   ignore:
@@ -24,6 +24,11 @@ services:
                   path: packages/*/package.json
         environment:
             - NODE_ENV=development
+            - MSSQL_SERVER=${MSSQL_SERVER}
+            - MSSQL_USER=${MSSQL_USER}
+            - MSSQL_PASSWORD=${MSSQL_PASSWORD}
+            - MSSQL_DATABASE=${MSSQL_DATABASE}
+            - MSSQL_PORT=${MSSQL_PORT}
         working_dir: /app/apps/api
         command: bun run dev
     app:
