Refactor API routes and repositories: remove unused routes, enhance project and activity filtering, and update package dependencies

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -4,20 +4,26 @@
     "type": "module",
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
+    "exports": {
+        ".": "./src/index.ts"
+    },
     "scripts": {
         "dev": "bun run src/index.ts",
         "start": "bun run src/index.ts"
     },
     "dependencies": {
         "@beg/types": "workspace:*",
+        "@beg/validations": "workspace:*",
         "@hono/zod-validator": "^0.4.3",
         "@libsql/client": "^0.14.0",
         "drizzle-orm": "^0.39.1",
-        "hono": "^3.0.0",
         "knex": "^3.1.0",
         "mysql2": "^3.0.0",
         "tedious": "^18.6.1",
         "zod": "^3.22.0"
+    },
+    "peerDependencies": {
+        "hono": "^4.7.5"
     },
     "devDependencies": {
         "@types/node": "^20.0.0",
