--- a/provision/nginx/nginx.prod.conf
+++ b/provision/nginx/nginx.prod.conf
@@ -31,11 +31,11 @@ http {
             absolute_redirect off;
         }
 
-        location /api {
+        location /api/ {
             set $api_host api;
+            rewrite ^/api/(.*) /$1 break;
             proxy_pass http://$api_host:3000;
         }
-
     
 
         proxy_set_header        X-Real-IP $remote_addr;
