--- a/provision/nginx/nginx.dev.conf
+++ b/provision/nginx/nginx.dev.conf
@@ -23,7 +23,7 @@ http {
 
         client_max_body_size 1G;
 
-        location / {
+        location / {    
             expires $expires;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
@@ -38,8 +38,9 @@ http {
             proxy_pass http://$web_app_host:8080;
         }
 
-        location /api {
+        location /api/ {
             set $api_host api;
+            rewrite ^/api/(.*) /$1 break;
             proxy_pass http://$api_host:3000;
         }
 
