Enhance project filtering and data handling: add unbilled duration to project model, update filtering capabilities in API, and refactor related components for improved usability. Remove deprecated ProjectFilterPanel and ProjectTable components, and update localization for new fields.

--- a/compose.yml
+++ b/compose.yml
@@ -43,7 +43,7 @@ services:
                   target: /app/apps/app
                   ignore:
                       - node_modules/
-                - action: sync
+                - action: sync+restart
                   path: ./packages
                   target: /app/packages
                   ignore:
