--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -11,6 +11,7 @@
         "@beg/api": "workspace:*",
         "@beg/types": "workspace:*",
         "@beg/validations": "workspace:*",
+        "@heroicons/vue": "^2.2.0",
         "@tailwindcss/vite": "^4.0.15",
         "hono": "^4.7.5",
         "pinia": "^3.0.1",
