Update Dockerfiles and configuration: standardize multi-stage build syntax, optimize bun installation with network concurrency, and adjust logging settings in docker-compose for the API service.

--- a/apps/api/Dockerfile
+++ b/apps/api/Dockerfile
@@ -4,7 +4,7 @@ WORKDIR /app
 FROM base AS development
 ENV NODE_ENV=development
 COPY . .
-RUN bun install
+RUN bun install --network-concurrency=5
 
 COPY . .
 EXPOSE 3000
@@ -13,7 +13,7 @@ CMD ["bun", "run", "dev"]
 FROM base AS production
 ENV NODE_ENV=production
 COPY . .
-RUN bun install --production
+RUN bun install --production --network-concurrency=5
 
 RUN cd apps/api && bun run build
 EXPOSE 3000
