--- a/provision/nginx/nginx.dev.conf
+++ b/provision/nginx/nginx.dev.conf
@@ -12,6 +12,7 @@ http {
     proxy_next_upstream error timeout http_502 http_503 http_504 non_idempotent;
 
     resolver 127.0.0.11 ipv6=off valid=10s;
+    resolver_timeout 5s;
     proxy_http_version 1.1;
     proxy_set_header Connection "";
 
