Update Docker configuration and project structure: add data directory to .gitignore, refactor docker-compose to include new volume mappings for data and node modules, and remove unused files and repositories related to the old database structure. Enhance API routes to return empty responses for clients, activities, and projects while maintaining structure for future implementation.

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -9,7 +9,11 @@
     },
     "scripts": {
         "dev": "bun run src/index.ts",
-        "start": "bun run src/index.ts"
+        "start": "bun run src/index.ts",
+        "db:generate": "drizzle-kit generate",
+        "db:migrate": "bun run src/db/migrate.ts",
+        "db:push": "drizzle-kit push",
+        "db:studio": "drizzle-kit studio"
     },
     "dependencies": {
         "@beg/types": "workspace:*",
