--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -8,8 +8,13 @@
         "outDir": "./dist",
         "esModuleInterop": true,
         "skipLibCheck": true,
-        "types": ["bun-types"]
+        "types": ["bun-types"],
+        "baseUrl": ".",
+        "paths": {
+            "@src/*": ["src/*"]
+        }
     },
     "include": ["src/**/*"],
+
     "exclude": ["node_modules", "dist"]
 }
