--- a/compose.yml
+++ b/compose.yml
@@ -4,29 +4,19 @@ services:
             context: .
             target: development
             dockerfile: apps/api/Dockerfile
-        develop:
-            watch:
-                - action: sync+restart
-                  path: ./apps/api
-                  target: /app/apps/api
-                  ignore:
-                      - node_modules/
-                - action: sync+restart
-                  path: ./packages
-                  target: /app/packages
-                  ignore:
-                      - node_modules/
-                - action: rebuild
-                  path: apps/api/package.json
-                - action: rebuild
-                  path: packages/*/package.json
         environment:
             - NODE_ENV=development
+            - DATABASE_FILE_PATH=${DATABASE_FILE_PATH}
             - MSSQL_SERVER=${MSSQL_SERVER}
             - MSSQL_USER=${MSSQL_USER}
             - MSSQL_PASSWORD=${MSSQL_PASSWORD}
             - MSSQL_DATABASE=${MSSQL_DATABASE}
             - MSSQL_PORT=${MSSQL_PORT}
+        volumes:
+            - ./apps/api:/app/apps/api
+            - ./packages:/app/packages
+            - ./data:/app/data
+            - api_node_modules:/app/apps/api/node_modules
         working_dir: /app/apps/api
         command: bun run dev
     app:
@@ -34,26 +24,14 @@ services:
             context: .
             target: development
             dockerfile: apps/app/Dockerfile
-        develop:
-            watch:
-                - action: sync
-                  path: ./apps/app
-                  target: /app/apps/app
-                  ignore:
-                      - node_modules/
-                - action: sync+restart
-                  path: ./packages
-                  target: /app/packages
-                  ignore:
-                      - node_modules/
-                - action: rebuild
-                  path: ./apps/app/package.json
-                - action: rebuild
-                  path: ./packages/*/package.json
         environment:
             - NODE_ENV=development
             - VITE_HMR_HOST=0.0.0.0
             - VITE_HMR_PORT=8080
+        volumes:
+            - ./apps/app:/app/apps/app
+            - ./packages:/app/packages
+            - app_node_modules:/app/apps/app/node_modules
         working_dir: /app/apps/app
         command: bun run dev
 
@@ -72,3 +50,10 @@ services:
                   target: /etc/nginx/nginx.conf
 volumes:
     sqlite-data:
+        driver: local
+        driver_opts:
+            type: none
+            o: bind
+            device: ./data/db
+    api_node_modules:
+    app_node_modules:
