Implement MariaDB support and refactor database configuration: update .env.example for MariaDB settings, modify Docker configurations to include MariaDB service, and transition API to use MySQL dialect. Enhance user authentication routes and add JWT support, while updating the schema and migration scripts for compatibility with MySQL. Improve overall project structure and localization for authentication messages.

--- a/apps/api/Dockerfile
+++ b/apps/api/Dockerfile
@@ -4,10 +4,11 @@ WORKDIR /app
 FROM base AS development
 ENV NODE_ENV=development
 COPY . .
-
 RUN bun install --network-concurrency=5
 
+COPY . .
 EXPOSE 3000
+VOLUME ["/app/data", "/app/apps/api/drizzle"]
 CMD ["bun", "run", "dev"]
 
 FROM base AS production
