--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,12 @@ MSSQL_USER=soft_oabeg
 MSSQL_PASSWORD=xxxx
 MSSQL_DATABASE=OA_BEG
 MSSQL_PORT=1433
+
+# MariaDB Configuration for the database
+DB_HOST=mariadb
+DB_PASSWORD=rootpassword
+DB_DATABASE=beg
+DB_USER=beg
+DB_PORT=3306
+
+JWT_SECRET=your-safe-token-here
