--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -8,21 +8,27 @@
         ".": "./src/index.ts"
     },
     "scripts": {
-        "dev": "bun run src/index.ts",
+        "dev": "bun run --watch src/index.ts",
         "start": "bun run src/index.ts",
         "db:generate": "drizzle-kit generate",
         "db:migrate": "bun run src/db/migrate.ts",
         "db:push": "drizzle-kit push",
-        "db:studio": "drizzle-kit studio"
+        "db:studio": "drizzle-kit studio",
+        "db:seed": "bun run src/db/seed.ts"
     },
     "dependencies": {
         "@beg/types": "workspace:*",
         "@beg/validations": "workspace:*",
         "@hono/zod-validator": "^0.4.3",
         "@libsql/client": "^0.14.0",
-        "drizzle-orm": "^0.39.1",
+        "@types/bcrypt": "^5.0.2",
+        "@types/jsonwebtoken": "^9.0.9",
+        "bcrypt": "^5.1.1",
+        "drizzle-orm": "^0.43.1",
+        "drizzle-zod": "^0.7.1",
+        "jsonwebtoken": "^9.0.2",
         "knex": "^3.1.0",
-        "mysql2": "^3.0.0",
+        "mysql2": "^3.14.1",
         "tedious": "^18.6.1",
         "zod": "^3.22.0"
     },
