Refactor database structure to transition from MariaDB to SQLite: update Docker configurations, modify API to use SQLite dialect, and adjust schema and migration scripts accordingly. Ensure proper directory creation for SQLite database and enhance data import functionality. Remove deprecated MariaDB configurations and related files.

--- a/compose.prod.yml
+++ b/compose.prod.yml
@@ -1,22 +1,6 @@
 version: "3.8"
 
 services:
-    mariadb:
-        image: mariadb:10.11
-        environment:
-            - MARIADB_ROOT_PASSWORD=${DB_PASSWORD}
-            - MARIADB_DATABASE=${DB_DATABASE}
-            - MARIADB_USER=${DB_USER}
-            - MARIADB_PASSWORD=${DB_PASSWORD}
-        volumes:
-            - ./db:/var/lib/mysql
-        healthcheck:
-            test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "root", "-p${DB_PASSWORD}"]
-            interval: 5s
-            timeout: 5s
-            retries: 5
-        restart: always
-
     api:
         build:
             context: .
@@ -24,14 +8,9 @@ services:
             dockerfile: apps/api/Dockerfile
         environment:
             - NODE_ENV=production
-            - DB_HOST=mariadb
-            - DB_PORT=3306
-            - DB_USER=${DB_USER}
-            - DB_PASSWORD=${DB_PASSWORD}
-            - DB_DATABASE=${DB_DATABASE}
-        depends_on:
-            mariadb:
-                condition: service_healthy
+            - DB_FILE_PATH=/app/data/db.sqlite
+        volumes:
+            - ./data:/app/data
         working_dir: /app/apps/api
         command: bun run start
         restart: always
