--- a/apps/api/Dockerfile
+++ b/apps/api/Dockerfile
@@ -5,6 +5,8 @@ FROM base AS development
 ENV NODE_ENV=development
 COPY . .
 RUN bun install --network-concurrency=5
+# Ensure data directory exists
+RUN mkdir -p /app/data
 
 COPY . .
 EXPOSE 3000
@@ -15,6 +17,8 @@ FROM base AS production
 ENV NODE_ENV=production
 COPY . .
 RUN bun install --production --network-concurrency=5
+# Ensure data directory exists
+RUN mkdir -p /app/data
 
 RUN cd apps/api && bun run build
 EXPOSE 3000
