--- a/provision/nginx/nginx.prod.conf
+++ b/provision/nginx/nginx.prod.conf
@@ -24,9 +24,9 @@ http {
         client_max_body_size 1G;
 
         location / {
-            alias /var/www/app;
+            root /var/www/app;
             index index.html;
-            try_files $uri $uri/ /app/index.html;
+            try_files $uri $uri/ /index.html;
             port_in_redirect on;
             absolute_redirect off;
         }
