Implement user creation and update functionality in user repository and routes. Add validation schemas for user creation and updates. Refactor user fetching logic to enhance type safety and improve error handling. Update collaborator views to utilize new user management features.

--- a/apps/app/Dockerfile
+++ b/apps/app/Dockerfile
@@ -3,7 +3,7 @@ WORKDIR /app
 
 FROM base AS development
 COPY . .
-RUN bun install --network-concurrency=5
+RUN bun install --network-concurrency=5 -f
 
 ENV NODE_ENV=development
 EXPOSE 8080
@@ -12,7 +12,7 @@ CMD ["bun", "run", "dev"]
 FROM base AS production
 ENV NODE_ENV=production
 COPY . .
-RUN bun install --network-concurrency=5
+RUN bun install --network-concurrency=5 -f
 WORKDIR /app/apps/app
 CMD ["bun", "run", "build"]
 
