feat: update environment configuration and database support
- Removed MSSQL configuration from .env.example and added MANDATS_PATH and MS_ACCESS_DB_PATH.
- Updated Dockerfile to install mdb-tools for Access database support.
- Deleted obsolete migration script for invoice enums.
- Modified invoice repository to conditionally mark activities as billed based on billing mode.
- Updated InvoiceGeneralInfo.vue to reflect changes in billing modes.
- Adjusted InvoicePreview.vue to improve layout and display billing mode conditionally.
- Enhanced TimeEntriesManager.vue to utilize i18n for export column labels.
- Updated French translations for billing modes and project preview.
- Adjusted ApiError class to handle unauthorized status codes.
- Updated EditInvoiceView.vue and PreviewInvoiceView.vue to conditionally render components based on billing mode.
- Enhanced ProjectPreviewView.vue to display project details more clearly.
- Updated Docker Compose files to include new environment variables for mandats and Access database.
- Updated invoice validation to reflect new billing mode enum.

--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,3 @@
-MSSQL_SERVER=datacloud.odys.ch
-MSSQL_USER=soft_oabeg
-MSSQL_PASSWORD=xxxx
-MSSQL_DATABASE=OA_BEG
-MSSQL_PORT=1433
-
-# MariaDB Configuration for the database
-DB_HOST=mariadb
-DB_PASSWORD=rootpassword
-DB_DATABASE=beg
-DB_USER=beg
-DB_PORT=3306
-
-JWT_SECRET=your-safe-token-here
+MANDATS_PATH=./data/mandats
+JWT_SECRET=secret-to-change
+MS_ACCESS_DB_PATH=./data/BEGdatas.mdb
