--- a/apps/api/Dockerfile
+++ b/apps/api/Dockerfile
@@ -1,5 +1,7 @@
 FROM oven/bun:1 AS base
 WORKDIR /app
+# Install mdb-tools for Access database support
+RUN apt-get update && apt-get install -y mdbtools && rm -rf /var/lib/apt/lists/*
 
 FROM base AS development
 ENV NODE_ENV=development
