--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -12,6 +12,7 @@
         "@beg/validations": "workspace:*",
         "@heroicons/vue": "^2.2.0",
         "@tailwindcss/vite": "^4.0.15",
+        "@vueuse/core": "^13.9.0",
         "hono": "^4.7.5",
         "pinia": "^3.0.1",
         "tailwindcss": "^4.0.15",
