--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
         "electron:dev": "cd apps/electron && bun run dev",
         "electron:start": "cd apps/electron && bun run start",
         "electron:build": "cd apps/electron && bun run dist",
-        "docker:build": "./scripts/build-docker.sh",
-        "docker:build:export": "./scripts/build-docker.sh"
+        "docker:build": "./scripts/build-docker.sh"
     },
     "module": "index.ts",
     "type": "module",
