--- a/provision/nginx/Dockerfile.multistage
+++ b/provision/nginx/Dockerfile.multistage
@@ -23,6 +23,9 @@ COPY --from=app-builder /app/apps/app/dist /var/www/app
 # Copy nginx config
 COPY provision/nginx/nginx.prod.conf /etc/nginx/nginx.conf
 
+# Bundle self-signed TLS assets for default HTTPS termination
+COPY provision/nginx/certs /etc/nginx/certs
+
 EXPOSE 80
 
 CMD ["nginx", "-g", "daemon off;"]
