--- a/provision/nginx/nginx.prod.conf
+++ b/provision/nginx/nginx.prod.conf
@@ -15,20 +15,6 @@ http {
     proxy_http_version 1.1;
     proxy_set_header Connection "";
 
-    # Redirect HTTP to HTTPS
-    server {
-        listen 80;
-        listen [::]:80;
-        server_name ${DOMAIN_NAME};
-
-        location /.well-known/acme-challenge/ {
-            root /var/www/certbot;
-        }
-
-        location / {
-            return 301 https://$server_name$request_uri;
-        }
-    }
 
     # HTTPS Server
     server {
@@ -36,12 +22,8 @@ http {
         listen       443 ssl http2;
         listen       [::]:443 ssl http2;
 
-        server_name  ${DOMAIN_NAME};
-
-        # SSL Configuration
-        ssl_certificate /etc/letsencrypt/live/${DOMAIN_NAME}/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/${DOMAIN_NAME}/privkey.pem;
-        ssl_trusted_certificate /etc/letsencrypt/live/${DOMAIN_NAME}/chain.pem;
+        ssl_certificate     /etc/nginx/certs/selfsigned.crt;
+        ssl_certificate_key /etc/nginx/certs/selfsigned.key;
 
         # SSL Security Settings
         ssl_protocols TLSv1.2 TLSv1.3;
