--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -26,6 +26,7 @@
         "bcrypt": "^5.1.1",
         "drizzle-orm": "^0.43.1",
         "drizzle-zod": "^0.7.1",
+        "exceljs": "^4.4.0",
         "jsonwebtoken": "^9.0.2",
         "knex": "^3.1.0",
         "zod": "^3.22.0"
