--- a/packages/validations/package.json
+++ b/packages/validations/package.json
@@ -7,6 +7,7 @@
         ".": "./index.ts"
     },
     "peerDependencies": {
-        "typescript": "^5.0.0"
+        "typescript": "^5.0.0",
+        "zod": "^3.22.0"
     }
 }
