--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -21,6 +21,7 @@
         "vue-router": "^4.5.0"
     },
     "devDependencies": {
+        "@googlemaps/markerclusterer": "^2.6.2",
         "@tsconfig/node22": "^22.0.0",
         "@types/node": "^22.13.9",
         "@vitejs/plugin-vue": "^5.2.1",
