--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -38,5 +38,8 @@
         "vite": "^6.2.1",
         "vite-plugin-vue-devtools": "^7.7.2",
         "vue-tsc": "^2.2.8"
+    },
+    "peerDependencies": {
+        "zod": "^3.22.0"
     }
 }
