--- a/.dockerignore
+++ b/.dockerignore
@@ -3,14 +3,15 @@
 **/log
 data/
 **/.tar
-export-mdb
+export-mdb/
 **/.git
 .env.prod
 .env
 apps/desktop/
 legacy/
-odys-info
+odys-info/
 .cursor
 .claude
 .vscode
 exports/
+legacy/
