--- a/compose.staging.yml
+++ b/compose.staging.yml
@@ -18,48 +18,13 @@ services:
         working_dir: /app/apps/api
         command: bun run start
         restart: always
-    app:
-        restart: no
-        build:
-            context: .
-            target: production
-            dockerfile: apps/app/Dockerfile
-        environment:
-            - NODE_ENV=production
-        volumes:
-            - app-dist:/app/apps/app/dist
-        working_dir: /app/apps/app
-        command:
-            - bun
-            - run
-            - build
     proxy:
         restart: always
         container_name: proxy-beg
         build:
-            context: ./provision/nginx
-            dockerfile: Dockerfile
+            context: .
+            dockerfile: provision/nginx/Dockerfile.multistage
             target: production
-        depends_on:
-            app:
-                condition: service_completed_successfully
-        volumes:
-            - app-dist:/var/www/app:ro
-            - ./provision/nginx/nginx.prod.conf:/etc/nginx/nginx.conf:ro
-            - ./provision/nginx/.htpasswd:/etc/nginx/.htpasswd:ro
-        networks:
-            - proxy
-        labels:
-            - traefik.enable=true
-            - traefik.http.routers.beg.middlewares=default-headers@file
-            - traefik.http.routers.beg.entrypoints=https
-            - traefik.http.routers.beg.rule=Host(`beg.solioz.dev`)
-            - traefik.http.routers.beg.tls=true
-            - traefik.http.routers.beg.service=beg
-            - traefik.http.services.beg.loadbalancer.server.port=80
-            - traefik.docker.network=proxy
 networks:
     proxy:
         external: true
-volumes:
-    app-dist: null
