--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "scripts": {
         "dev": "docker compose up --watch",
         "desktop:dev": "cd apps/desktop && bun run dev",
+        "desktop:release": "cd apps/desktop && bun run release",
         "docker:build": "./scripts/build-docker.sh"
     },
     "module": "index.ts",
