--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -13,6 +13,8 @@
         "@heroicons/vue": "^2.2.0",
         "@tailwindcss/vite": "^4.0.15",
         "@tauri-apps/api": "^2.9.0",
+        "@tauri-apps/plugin-dialog": "^2.4.2",
+        "@tauri-apps/plugin-fs": "^2.4.4",
         "@vueuse/core": "^13.9.0",
         "hono": "^4.7.5",
         "pinia": "^3.0.1",
