--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -1,6 +1,6 @@
 {
     "name": "beg-gestion-desktop",
-    "version": "0.1.0",
+    "version": "0.1.1",
     "devDependencies": {
         "@tauri-apps/cli": "^2.2.0"
     },
@@ -13,7 +13,7 @@
         "build:windows:x86": "tauri build --config src-tauri/tauri.conf.json --runner cargo-xwin --target x86_64-pc-windows-msvc",
         "build:windows:arm64": "tauri build --config src-tauri/tauri.conf.json --runner cargo-xwin --target aarch64-pc-windows-msvc",
         "build:all": "bun run build:windows:x86 && bun run build:windows:arm64 && bun run copy-builds",
-        "release": "bun run build:all",
+        "release": "bun run build:all && bun run copy-builds",
         "copy-builds": "bun run copy-builds.ts"
     },
     "type": "module"
